--- a/app/index.html
+++ b/app/index.html
@@ -275,7 +275,10 @@
             <div class="settingsTitle">
               <label for="textarea__urls">Urls</label>
             </div>
-            <textarea class="textarea" id="textarea__urls" cols="30" rows="10">https://google.com/</textarea>
+            <textarea class="textarea" id="textarea__urls" cols="30" rows="10">https://google.com/
+https://interia.pl/
+https://onet.pl/
+            </textarea>
           </li>
         </ul>
       </div>
