--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./style/globalStyles.css" />
   <link rel="stylesheet" href="./style/modal.css" />
   <link rel="stylesheet" href="./style/windowPopup.css">
+  <link rel="stylesheet" href="./style/loadingContainer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap"
@@ -26,24 +27,30 @@
   <script defer src="./tests/spider.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 
 </head>
 
 <body>
   <header>
     <div class="navigationBar">
-      <button class="navigationBar__button js-minimizeButton">
-        <i class="fa-solid fa-minus navigationBar__icons"></i>
-      </button>
+      <div class="navigation__logo"><img class="navigationBar__image" src="../icon/icon.ico" alt="Application icon">
+        <span>SEO Checker</span>
+      </div>
+      <div class="navigation__btns"> <button class="navigationBar__button js-minimizeButton">
+          <i class="fa-solid fa-minus navigationBar__icons"></i>
+        </button>
 
-      <button class="navigationBar__button js-maximizeButton">
-        <i class="fa-regular fa-window-maximize navigationBar__icons"></i>
-      </button>
+        <button class="navigationBar__button js-maximizeButton">
+          <i class="fa-regular fa-window-maximize navigationBar__icons"></i>
+        </button>
 
-      <button class="navigationBar__button js-exitButton">
-        <i class="fa-solid fa-xmark navigationBar__icons"></i>
-      </button>
+        <button class="navigationBar__button js-exitButton">
+          <i class="fa-solid fa-xmark navigationBar__icons"></i>
+        </button>
+      </div>
     </div>
 
     <div class="navigationBtnsWrapper">
@@ -79,17 +86,52 @@
       </div>
       <div class="navigationBtnContainer">
         <button class="sections_button js-settingsSectionButton">
-          <i class="fa-solid sections__buttonIcon fa-gear"></i><span class="navigation__btnText">Settings</span>
+          <i class="fa-solid sections__buttonIcon fa-gear"></i><span class="navigation__btnText">Ustawienia</span>
         </button>
       </div>
     </div>
+
+
+
+
   </header>
 
   <main>
+
+    <div class="naviagtion__loadingContainer">
+
+
+      <div class="naviagtion__loadingContainer--box">
+        <div>Lighthouse</div>
+        <span class="loadingValue__lighthouse js-statusBar__lighthouse--value">0%</span>
+        <div class="navigation__loadingBar">
+          <div class="navigation__statusBar js-statusBar__lighthouse"></div>
+        </div>
+      </div>
+
+      <div class="naviagtion__loadingContainer--box">
+        <div>Axe</div>
+        <span class="loadingValue js-statusBar__axe--value">0%</span>
+        <div class="navigation__loadingBar">
+          <div class="navigation__statusBar js-statusBar__axe"></div>
+        </div>
+      </div>
+      <div class="naviagtion__loadingContainer--box">
+        <div>Spider</div>
+        <span class="loadingValue js-statusBar__spider--value">0%</span>
+        <div class="navigation__loadingBar">
+          <div class="navigation__statusBar js-statusBar__spider"></div>
+        </div>
+      </div>
+
+
+    </div>
+
+
     <section class="lighthouse section">
       <div class="formContainer">
         <div class="inputsContainer">
-          <input class="fileName__input input-lighthouse" placeholder="filename" id="lighthouse__testName"
+          <input class="fileName__input input-lighthouse" placeholder="nazwa_folderu" id="lighthouse__testName"
             type="text" />
 
           <label class="checkboxContainer">Performance<input class="lighthouse__input" name="performance" checked
@@ -105,31 +147,35 @@
         </div>
 
         <div class="buttons">
-          <button name='lighthouse' class="button js-lighthouseStartBtn">Check</button>
+          <button name='lighthouse' class="button js-lighthouseStartBtn">Test</button>
         </div>
       </div>
 
       <div class="aboutContainer">
-        <img class=aboutInfoImage src="./images/info.png" alt="Information image">
-        <span class="aboutText">
-          Lighthouse to narzędzie służące do testowania i optymalizacji stron internetowych pod kątem wydajności,
-          dostępności, SEO i najlepszych praktyk. Pozwala analizować strony pod kątem ich szybkości, responsywności,
-          użyteczności na różnych urządzeniach, a także zgodności z zasadami dostępności dla osób z
-          niepełnosprawnościami.
+        <div class="aboutcontainer_lightbox">
+          <img class=aboutInfoImage src="./images/info.png" alt="Information image">
+          <span class="aboutText">
+            Lighthouse to narzędzie służące do testowania i optymalizacji stron internetowych pod kątem wydajności,
+            dostępności, SEO i najlepszych praktyk. Pozwala analizować strony pod kątem ich szybkości, responsywności,
+            użyteczności na różnych urządzeniach, a także zgodności z zasadami dostępności dla osób z
+            niepełnosprawnościami.
 
-          <br><br>
-          Za pomocą Lighthouse możemy:
+            <br><br>
+            Za pomocą Lighthouse możemy:
 
-          <ul>
-            <li>Testować wydajność strony, np. czas ładowania, renderowanie, wykorzystanie zasobów.</li>
-            <li>Ocenić dostępność dla różnych grup użytkowników, w tym osób z ograniczeniami wzrokowymi lub ruchowymi.
-            </li>
-            <li>Analizować SEO, czyli optymalizację pod kątem wyszukiwarek internetowych.</li>
-            <li>Sprawdzić zgodność z najlepszymi praktykami, np. bezpieczeństwo (HTTPS, brak niebezpiecznych skryptów).
-            </li>
-          </ul>
+            <ul>
+              <li>✅ Testować wydajność strony, np. czas ładowania, renderowanie, wykorzystanie zasobów.</li>
+              <li>✅ Ocenić dostępność dla różnych grup użytkowników, w tym osób z ograniczeniami wzrokowymi lub
+                ruchowymi.
+              </li>
+              <li>✅ Analizować SEO, czyli optymalizację pod kątem wyszukiwarek internetowych.</li>
+              <li>✅ Sprawdzić zgodność z najlepszymi praktykami, np. bezpieczeństwo (HTTPS, brak niebezpiecznych
+                skryptów).
+              </li>
+            </ul>
 
-        </span>
+          </span>
+        </div>
 
 
       </div>
@@ -138,7 +184,7 @@
     <section class="axe section">
       <div class="formContainer">
         <div class="inputsContainer">
-          <input placeholder="filename" class="fileName__input js-axeFilename" type="text" />
+          <input placeholder="nazwa_folderu" class="fileName__input js-axeFilename" type="text" />
 
           <div class="inputs__columns">
             <div class="inputsColumnsContainer">
@@ -166,44 +212,47 @@
           </div>
         </div>
         <div class="buttons">
-          <button name="axe" class="button js-axeStartBtn">Check</button>
+          <button name="axe" class="button js-axeStartBtn">Test</button>
         </div>
       </div>
 
       <div class="aboutContainer">
-        <img class=aboutInfoImage src="./images/info.png" alt="Information image">
-        <span class="aboutText">
+        <div class="aboutcontainer_lightbox">
+          <img class=aboutInfoImage src="./images/info.png" alt="Information image">
+          <span class="aboutText">
 
-          Axe to narzędzie do automatycznego testowania dostępności stron internetowych, które pomaga programistom i
-          testerom wykrywać problemy związane z dostępnością na wczesnym etapie rozwoju aplikacji. Jest to jedno z
-          najpopularniejszych narzędzi do analizy zgodności z wytycznymi WCAG (Web Content Accessibility Guidelines).
-
-
-
-          <ul>
-            <li>Integracje: Axe działa jako rozszerzenie przeglądarek (Chrome, Firefox) lub biblioteka dla narzędzi
-              takich jak Selenium czy Puppeteer.</li>
-            <li>Automatyzacja testów: Umożliwia przeprowadzanie automatycznych testów dostępności, integrując się z
-              pipeline CI/CD, dzięki czemu błędy są wykrywane zanim trafią na produkcję.</li>
-            <li>Łatwość użycia: Po wykonaniu analizy Axe dostarcza szczegółowe raporty z opisami problemów i
-              sugerowanymi rozwiązaniami.</li>
-          </ul>
+            Axe to narzędzie do automatycznego testowania dostępności stron internetowych, które pomaga programistom i
+            testerom wykrywać problemy związane z dostępnością na wczesnym etapie rozwoju aplikacji. Jest to jedno z
+            najpopularniejszych narzędzi do analizy zgodności z wytycznymi WCAG (Web Content Accessibility Guidelines).
 
 
 
+            <ul>
+              <li>✅ Integracje: Axe działa jako rozszerzenie przeglądarek (Chrome, Firefox) lub biblioteka dla narzędzi
+                takich jak Selenium czy Puppeteer.</li>
+              <li>✅ Automatyzacja testów: Umożliwia przeprowadzanie automatycznych testów dostępności, integrując się z
+                pipeline CI/CD, dzięki czemu błędy są wykrywane zanim trafią na produkcję.</li>
+              <li>✅ Łatwość użycia: Po wykonaniu analizy Axe dostarcza szczegółowe raporty z opisami problemów i
+                sugerowanymi rozwiązaniami.</li>
+            </ul>
 
-        </span>
+
+
+
+          </span>
+        </div>
       </div>
     </section>
 
     <section class="crawler section">
       <div class="formContainer">
         <div class="inputsContainer">
-          <input placeholder="filename" class="fileName__input js-FileNameSpider" type="text" />
+          <input placeholder="nazwa_folderu" class="fileName__input js-FileNameSpider" type="text" />
 
           <div class="inputs__columns">
             <div class="inputsColumnsContainer">
-              <label class="checkboxContainer">Fonts<input class="jsFonts" type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Fonts<input class="jsFonts" type="checkbox" /><span
+                  class="checkmark"></span></label>
               <label class="checkboxContainer">Images<input class="jsImages" checked type="checkbox" /><span
                   class="checkmark"></span></label>
               <label class="checkboxContainer">Console logs<input class="jsLogs" type="checkbox" /><span
@@ -214,8 +263,10 @@
                   class="checkmark"></span></label>
             </div>
             <div class="inputsColumnsContainer">
-              <label class="checkboxContainer">SEO tags<input class="jsSeo" type="checkbox" /><span class="checkmark"></span></label>
-              <label class="checkboxContainer">H-tags<input class="jsHtags" type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">SEO tags<input class="jsSeo" type="checkbox" /><span
+                  class="checkmark"></span></label>
+              <label class="checkboxContainer">H-tags<input class="jsHtags" type="checkbox" /><span
+                  class="checkmark"></span></label>
             </div>
           </div>
 
@@ -223,28 +274,31 @@
         </div>
 
         <div class="buttons">
-          <button name="spider" class="button js-crawlerStartBtn">Check</button>
+          <button name="spider" class="button js-crawlerStartBtn">Test</button>
         </div>
       </div>
 
       <div class="aboutContainer">
-        <img class=aboutInfoImage src="./images/info.png" alt="Information image">
-        <span class="aboutText">
-          Skrypt stworzony w celu automatyzacji testów jakości stron, który skupia się na kilku kluczowych aspektach,
-          takich jak spójność wizualna, poprawność kodu oraz optymalizacja SEO. Dzięki szerokiemu zakresowi funkcji
-          narzędzie to wspiera programistów, testerów i specjalistów SEO w poprawie jakości stron internetowych.
+        <div class="aboutcontainer_lightbox">
+          <img class=aboutInfoImage src="./images/info.png" alt="Information image">
+          <span class="aboutText">
+            Skrypt stworzony w celu automatyzacji testów jakości stron, który skupia się na kilku kluczowych aspektach,
+            takich jak spójność wizualna, poprawność kodu oraz optymalizacja SEO. Dzięki szerokiemu zakresowi funkcji
+            narzędzie to wspiera programistów, testerów i specjalistów SEO w poprawie jakości stron internetowych.
 
-          <br><br>
+            <br><br>
 
-          <ul>
-            <li>Narzędzie automatycznie analizuje czcionki użyte na stronie, sprawdzając ich rodzaje, rozmiary oraz styl.</li>
-            <li>Analiza obrazów</li>
-            <li>Lista komunikatów z console log</li>
-            <li>Testowanie linków i statusów odpowiedzi</li>
-            <li>Screenshot całej strony</li>
-            <li>Kontrola SEO tagów</li>
-          </ul>
-        </span>
+            <ul>
+              <li>✅ Narzędzie automatycznie analizuje czcionki użyte na stronie, sprawdzając ich rodzaje, rozmiary oraz
+                styl.</li>
+              <li>✅ Analiza obrazów - walidacja pod katem braku odpowiednich atrybutow i wymiarow.</li>
+              <li>✅ Lista komunikatów z console log, szybki sposob na sprawdzenie bledow komunikacyjnych strony.</li>
+              <li>✅ Testowanie linków, lista linkow. </li>
+              <li>✅ Screenshot całej strony.</li>
+              <li>✅ Kontrola SEO tagów.</li>
+            </ul>
+          </span>
+        </div>
       </div>
     </section>
 
@@ -252,14 +306,14 @@
       <div class="formContainer formContainer--settings">
         <ul class="settingsList">
           <li class="settingsListItem">
-            <div class="settingsTitle">Headless</div>
+            <div class="settingsTitle">Headless(tryb bezglowy)</div>
             <label class="switch">
               <input type="checkbox" checked class="js-headless" />
               <span class="slider round"></span>
             </label>
           </li>
           <li class="settingsListItem">
-            <div class="settingsTitle">Autorization</div>
+            <div class="settingsTitle">Autoryzacja</div>
             <label class="switch">
               <input type="checkbox" class="js-authorizeSwitch" />
               <span class="slider round"></span>
@@ -268,12 +322,12 @@
             <div class="autorizationInputContainer js-authContainer">
               <input class="fileName__input fileName__input--auth" placeholder="https://google.com/autorize"
                 type="text" />
-              <button class="button button--auth">Autorize</button>
+              <button class="button button--auth">Autoryzuj</button>
             </div>
           </li>
           <li class="settingsListItem">
             <div class="settingsTitle">
-              <label for="textarea__urls">Urls</label>
+              <label for="textarea__urls">Url'e</label>
             </div>
             <textarea class="textarea" id="textarea__urls" cols="30" rows="10">https://google.com/
 https://interia.pl/
